src/test/compile-fail/bad-underscore4.rs
fn one(f: fn(int)) {}
fn two(f: fn(int, int)) {}

fn main() {
    let x = 4[_];  //! ERROR `_` can only appear as part of
}